[gd_scene load_steps=5 format=3 uid="uid://b6s48eiujw0ub"]

[ext_resource type="Script" path="res://scenes/end_game/end_game_panel.gd" id="1_6b147"]
[ext_resource type="Theme" uid="uid://b0xtrucce6h42" path="res://themes/main_theme.tres" id="1_dfu3b"]
[ext_resource type="Texture2D" uid="uid://d2qgdvd8sxhhl" path="res://assets/ui/panel_basic.png" id="2_lq1vi"]
[ext_resource type="Texture2D" uid="uid://c1wybj1dhm7fk" path="res://assets/hamster_ghosts/ghost--campbell.png" id="3_15pl5"]

[node name="EndGamePanel" type="CanvasLayer"]
layer = 3
script = ExtResource("1_6b147")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_dfu3b")
color = Color(0, 0, 0, 0.501961)

[node name="EndGameInfo" type="TextureRect" parent="ColorRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -247.0
offset_top = -208.5
offset_right = 247.0
offset_bottom = 208.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_lq1vi")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="ColorRect/EndGameInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/EndGameInfo/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 30

[node name="Label" type="Label" parent="ColorRect/EndGameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 24
text = "You died!"
horizontal_alignment = 1

[node name="HamsterProfile" type="TextureRect" parent="ColorRect/EndGameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
texture = ExtResource("3_15pl5")
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/EndGameInfo/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 13

[node name="Label" type="Label" parent="ColorRect/EndGameInfo/MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Your final mass: 12312312"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ReturnHomeButton" type="Button" parent="ColorRect/EndGameInfo/MarginContainer/VBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 20
text = "Return to home"

[connection signal="pressed" from="ColorRect/EndGameInfo/MarginContainer/VBoxContainer/VBoxContainer/ReturnHomeButton" to="." method="_on_return_home_button_pressed"]
